# htimage

./: .gitignore  README.md  pyproject.toml
htimage/: __init__.py  htimage.py
htimage/finders/: __init__.py  chrome.py  chromium.py  edge.py  opera.py
htimage/finders/abc/: __init__.py  finder.py
htimage/finders/base/: finder.py
htimage/utils/: enums.py
