[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "htimage"
version = "0.1.0"
requires-python = ">= 3.6"
description = "Lightweight library for creating HTML file and web page images based on installed browsers. "
authors = [
    { name = "Astagnar" }
]
license = { text = "Apache-2.0" }
readme = "README.md"
keywords = ["htimage", "html2image", "html", "jpg", "png", "html to image", "html to png", "html to jpg"]

[tool.setuptools]
packages = [
    "htimage",
    "htimage.finders",
    "htimage.finders.abc",
    "htimage.utils"
]

[project.urls]
Homepage = "https://github.com/Astagnar/htimage"
Repository = "https://github.com/Astagnar/htimage"
Issues = "https://github.com/Astagnar/htimage/issues"
